2023-10-19T00:42:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6568287481 # 2003
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 757 1399 / 773 1424
* notice: next accum: outdated-unq outdated-all / unq all: 758 1401 / 773 1425
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-04] / [2023-10-18]

2023-10-18T08:12:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6558071163 # 2001
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 757 1399 / 772 1423
* notice: next accum: outdated-unq outdated-all / unq all: 757 1399 / 773 1424
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-04 2023-10-18]

2023-10-18T00:43:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6554597832 # 2000
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 756 1397 / 772 1422
* notice: next accum: outdated-unq outdated-all / unq all: 757 1399 / 772 1423
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-03] / [2023-10-17]

2023-10-17T08:13:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6544373626 # 1998