@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-10-05T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-08T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2023-10-18T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
