@@ -1,3 +1,12 @@
+2023-10-19T08:12:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6571725324 # 2004
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
+* notice: last 14d: unq all: 4 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 758 1401 / 773 1425
+* notice: next accum: outdated-unq outdated-all / unq all: 758 1401 / 774 1426
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-05 2023-10-19]
+
 2023-10-19T00:42:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6568287481 # 2003
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
